--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@reduxjs/toolkit": "^2.9.0",
     "antd": "^5.27.3",
     "axios": "^1.11.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
